# openinstruct

./: .gitignore  README.md  pyproject.toml
apps/vscode-extension/: README.md  extension.js  package.json
openinstruct/: agent.py  checkpoint.py  cli.py  config.py  daemon.py  knowledge.py  locking.py  memory.py  mobile.py  protocol.py  providers.py  session.py  sessions_api.py  tools.py  webui.py  worktree.py
scripts/: launch_mini_vscode.py
tests/: test_agent.py  test_config.py  test_daemon.py  test_knowledge.py  test_locking.py  test_memory.py  test_mobile.py  test_protocol.py  test_providers.py  test_session.py  test_tools.py
